# GoIT_PyWeb_HW9

hw9_web/: authors.json  main.py  models.py  pyproject.toml  quotes.json  seeds.py
