[tool.poetry]
name = "hw9-web"
version = "0.1.0"
description = ""
authors = ["= <=>"]
readme = "README.md"
packages = [{include = "hw9_web"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
